--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="page-home">
             <div class="content">
                 <header>
-                    <img src="/assets/logo.svg" alt="Logomarca" />
+                    <img src="./assets/logo.svg" alt="Logomarca" />
                     <a href="http://google.com.br">
                         <span></span>
                         Cadastre um ponto de coleta</a
