--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_br">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,10 @@
             href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700display=swap"
             rel="stylesheet"
         />
+        
         <link rel="stylesheet" href="./css/main.css" />
+        <link rel="stylesheet" href="./css/resposive.css">
+        <link rel="stylesheet" href="./css/home.css">
     </head>
 
     <body>
@@ -18,8 +21,8 @@
                     <img src="./assets/logo.svg" alt="Logomarca" />
                     <a href="http://google.com.br">
                         <span></span>
-                        Cadastre um ponto de coleta</a
-                    >
+                        Cadastre um ponto de coleta
+                    </a>
                 </header>
 
                 <main>
